# giftmanager

./: .gitignore  Dockerfile  alembic.ini  app.db  docker-compose.yml  input.scss  pyproject.toml  readme.md  release.ps1  tailwind.config.js  translation_key_finder.py
app/: auth.py  data_seeder.py  mail_sending.py  main.py  models.py  models_api.py  pydantic_schematizer.py  router_account.py  router_admin.py  router_api.py  router_calendar.py  router_friends.py  router_gift.py  router_important_event.py  router_interactions.py  router_settings.py  schemas.py  template_loading.py
app/locale/: de.json  en.json
app/migrations/: env.py
app/migrations/versions/: 2e58ec2d8f03_remove_some_columns_add_talkingspoints_.py  426675ce0632_add_interactionlogs_switch_to_uuids.py  570f3e1c9876_initialize_tables.py  571caa99a4f6_add_demodata_table.py  725797e3394e_important_events_only_use_the_date_not_.py  76b0ad78f56a_add_contact_table.py  77e33f8d8e27_add_change_datetime_interaction_to_date.py  878e2c918c5b_add_type_uuid_to_mapping.py  a935e83360f8_add_change_datetime_birthday_to_date.py  d02d19abae93_add_user_tables.py  dde958d254b1_modify_gift_idea_logic.py
app/static/: style.css
app/templates/: about.html  admin.html  base.html  calendar.html  debug_message.html  error.html  friend_detail.html  friend_form.html  friend_overview.html  gift_idea_details.html  icons.j2  important_event_details.html  important_event_new.html  interaction_detail.html  interaction_new.html  login.html  new_gift_idea.html  new_important_event.html  new_interaction.html  password_change.html  password_reset.html  register.html  register_activated.html  register_done.html  reset_password.html  settings.html  upload_friends.html
tests/: test_main.py
