[tool.poetry]
name = "giftmanager"
version = "0.1.43"
description = ""
authors = ["Lester1989 <lester@techfak.uni-bielefeld.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
Jinja2 = "^3.1.3"
uvicorn = "^0.29.0"
SQLAlchemy = "^2.0.26"
alembic = "^1.13.1"
ulid-py = "^1.1.0"
fastapi-sqlalchemy = "^0.2.1"
pytest = "^8.0.0"
httpx = "^0.27.0"
pytailwindcss = "^0.2.0"
python-multipart = "^0.0.9"
psycopg2 = "^2.9.9"
resend = "^0.8.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
faker = "^24.14.0"
itsdangerous = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
